--- a/etterem.html
+++ b/etterem.html
@@ -37,8 +37,9 @@
        <a href="Sakana@Sakura"> erre kattintunk: Sakana@Sakura </a>
     <a href="Aziz_Az_Igazi.html"> Aziz Az Igazi </a>
     <a href="wendy's.html"> wendy's </a>
-    <a href="Tonett.html"> Tonett étterem </a>
-    <a href="Gino's.html">Gino's Pizza és Spagetti</a>
+    <ahref="Gino's.html">Gino's Pizza és Spagetti</a>
+    <a href="burger_king.html">  Ruyi étterem</a>
+
 
 </body>
 </html>
